shrink font size

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -55,11 +55,11 @@
 
 			<!-- Expertise -->
 			<div class="row">
-				<div class="col-sm-2">
+				<div class="col-sm-2 resume-subtitle">
 					<p style="font-size: 125%;">EXPERTISE</p>
 				</div>
 
-				<div class="col-sm-10">
+				<div class="col-sm-10 resume-content">
 					<div class="row">
 						<div class="col-sm-10">
 							<p class="text-muted" style="font-size: 110%;">Tools & Technologies</p>
@@ -315,13 +315,13 @@
 		<!-- Work Experience -->
 		<div class="row">
 			<!-- title -->
-			<div class="col-sm-2">
+			<div class="col-sm-2 resume-subtitle">
 				<p style="font-size: 125%;">EXPERIENCE</p>
 			</div>
 			<!--- title end -->
 
 			<!-- content -->
-			<div class="col-sm-10">
+			<div class="col-sm-10 resume-content">
 
 				<!-- work exp 1 -->
 				<div class="row">
@@ -387,13 +387,13 @@
 		<!-- Education -->
 		<div class="row">
 			<!-- title -->
-			<div class="col-sm-2">
+			<div class="col-sm-2 resume-subtitle">
 				<p style="font-size: 125%;">EDUCATION</p>
 			</div>
 			<!--- title end -->
 
 			<!-- content -->
-			<div class="col-sm-10">
+			<div class="col-sm-10 resume-content">
 
 				<!-- Ed 1 -->
 				<div class="row">
@@ -438,13 +438,13 @@
 		<!-- Certificate -->
 		<div class="row">
 			<!-- title -->
-			<div class="col-sm-2">
+			<div class="col-sm-2 resume-subtitle">
 				<p style="font-size: 125%;">CERTIFICATION</p>
 			</div>
 			<!--- title end -->
 
 			<!-- content -->
-			<div class="col-sm-10">
+			<div class="col-sm-10 resume-content">
 
 				<!-- cert 0 -->
 				<div class="row">
@@ -488,39 +488,39 @@
 		<!-- publication -->
 		<div class="row">
 			<!-- title -->
-			<div class="col-sm-2">
+			<div class="col-sm-2 resume-subtitle">
 				<p style="font-size: 125%;">PUBLICATION</p>
 			</div>
 
 			<!-- content -->
-			<div class="col-sm-10">
+			<div class="col-sm-10 resume-content">
 
 				<div class="row mb-2">
-					<div class="col text-left" style="font-size: 80%;">
+					<div class="col text-left">
 						&raquo; Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics (2019). [<a href="https://ieeexplore.ieee.org/document/8704869" target="_blank">pdf</a>]
 					</div>
 				</div>
 
 				<div class="row mb-2">
-					<div class="col text-left" style="font-size: 80%;">
+					<div class="col text-left">
 						&raquo; Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Identifying Patients with Coronary Microvascular Dysfunction using Machine Learning." In 2018 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 715-721. IEEE, 2018. [<a href="https://ieeexplore.ieee.org/abstract/document/8637572" target="_blank">pdf</a>]
 					</div>
 				</div>
 
 				<div class="row mb-2">
-					<div class="col text-left" style="font-size: 80%;">
+					<div class="col text-left">
 						&raquo; Bishara, Sarah, Jennifer Baltes, Taha Hamid, <span style="color: red;">Taihua Li</span>, Denise C. Nacu, Caitlin K Martin, Jonathan Gemmell, Chris MacArthur, Daniela Raicu, and Nichole Pinkard. "Revealing Interaction Patterns Among Youth in an Online Social Learning Network Using Markov Chain Principles." Philadelphia, PA: International Society of the Learning Sciences., 2017. [<a href="https://repository.isls.org/handle/1/246" target="_blank">pdf</a>]
 					</div>
 				</div>
 
 				<div class="row mb-2">
-					<div class="col text-left" style="font-size: 80%;">
+					<div class="col text-left">
 						&raquo; Nacu, Denise C., Caitlin K. Martin, Nichole Pinkard, Taha Hamid, <span style="color: red;">Taihua Li</span>, Daniela Stan Raicu, and Jonathan Gemmell. "Helping educators leverage youth interest in STEM out-of-school programs." In 2016 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT), pp. 1-1. IEEE, 2016. [<a href="https://ieeexplore.ieee.org/abstract/document/7836178" target="_blank">pdf</a>]
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="col text-left" style="font-size: 80%;">
+					<div class="col text-left">
 						&raquo; Hamid, Taha, Denise C. Nacu, <span style="color: red;">Taihua Li</span>, Jonathan Gemmell, Daniela Stan Raicu, Caitlin K. Martin, Michael Schutzenhofer, and Nichole Pinkard. "Recommender system to support brokering of youth learning opportunities." In 2016 IEEE/WIC/ACM International Conference on Web Intelligence Workshops (WIW), pp. 64-65. IEEE, 2016. [<a href="https://ieeexplore.ieee.org/document/7814479" target="_blank">pdf</a>]
 					</div>
 				</div>
