move certification to local

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -471,7 +471,7 @@
 				<!-- cert 2 -->
 				<div class="row">
 					<div class="col-sm-9 text-left">
-						&raquo; <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/7MLRJP24NQY7" target="_blank">Deep Learning Specialization</a>, deeplearning.ai
+						&raquo; <a href="../docs/deep_learning_specialization.pdf" target="_blank">Deep Learning Specialization</a>, deeplearning.ai
 					</div>
 					<div class="col-sm-3 text-right">
 						Feb'18
