add responsive text and image

--- a/index.html
+++ b/index.html
@@ -50,16 +50,19 @@
 
 
 		<!-- Intro -->
-	  <div class="container intro-containter">
-			<span class="text-center">
+	  <div class="container-fluid intro-containter">
+			<div class="row text-center">
+				<p class="font-weight-lighter my-name">Hello! I'm Taihua (Ray) Li.</p>
+			</div>
 
-				<h1 class="font-weight-lighter my-name">Hello! I'm Taihua (Ray) Li.</h1>
-				<span class="text-muted">
-					<h2 class="font-weight-lighter my-2">data scientist + data engineer</h2>
-					<h5 class="font-weight-lighter my-2">Chicago, IL</h5>
-				</span>
+			<div class="row justify-content-center">
+				<p class="font-weight-lighter text-muted my-2 my-title">data scientist + data engineer</p>
+			</div>
 
-			</span>
+			<div class="row justify-content-center">
+				<p class="font-weight-lighter text-muted my-2 my-location">Chicago, IL</p>
+			</div>
+
 			<!-- other profiles -->
 			<div class="row justify-content-center my-4">
 				<ul class="profile-icon">
