--- a/pages/about.html
+++ b/pages/about.html
@@ -47,8 +47,8 @@
 		</div>
 		<!-- navigation bar end -->
 		<div class="container-fluid" style="width: 62%;">
-			<div class="row justify-content-center">
-				<img src="../img/headshot-1.jpeg" style="width: 80%;"/>
+			<div class="row">
+				<img class="image-fluid mx-auto" src="../img/headshot-1.jpeg" style="width: 80%; height: auto;" alt="Photo of Taihua Li"/>
 			</div>
 
 			<div class="row justify-content-center mt-3">
