--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
 		</div>
 		<!-- navigation bar end -->
 
-
-
 		<!-- Intro -->
 	  <div class="container-fluid intro-containter">
 			<div class="row text-center">
-				<p class="font-weight-lighter my-name">Hello! I'm Taihua (Ray) Li.</p>
+				<p class="font-weight-lighter my-name col-xs-12">Hello! I'm Taihua (Ray) Li.</p>
 			</div>
 
 			<div class="row justify-content-center">
