--- a/pages/resume.html
+++ b/pages/resume.html
@@ -326,10 +326,25 @@
 				<!-- work exp 1 -->
 				<div class="row">
 					<div class="col-md-9 text-left">
-						&raquo; Data Scientist II, <a href="https://www.cccis.com/" target="_blank"> CCC Information Services</a>, Chicago, IL
+						&raquo; <a href="https://www.cccis.com/" target="_blank"> CCC Information Services</a>, Chicago, IL
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Data Scientist II
 					</div>
 					<div class="col-md-3 text-right">
 						Jan'19 - Present
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Data Scientist I
+					</div>
+					<div class="col-md-3 text-right">
+						Jun'17 - Jan'19
 					</div>
 				</div>
 				<!-- work exp 1 end -->
@@ -337,10 +352,24 @@
 				<!-- work exp 2 -->
 				<div class="row">
 					<div class="col-md-9 text-left">
-						&raquo; Data Scientist I, <a href="https://www.cccis.com/" target="_blank"> CCC Information Services</a>, Chicago, IL
+						&raquo; <a href="https://generalassemb.ly/instructors/taihua-li/20185" target="_blank"> General Assembly</a>, Chicago, IL
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Lead Data Science Instructor
 					</div>
 					<div class="col-md-3 text-right">
-						Jun'17 - Jan'19
+						Apr'19 - Jun'19
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Data Science Instructor
+					</div>
+					<div class="col-md-3 text-right">
+						Apr'18 - Jun'18
 					</div>
 				</div>
 				<!-- work exp 2 end -->
@@ -348,10 +377,25 @@
 				<!-- work exp 3 -->
 				<div class="row">
 					<div class="col-md-9 text-left">
-						&raquo; Lead Data Science Instructor, <a href="https://generalassemb.ly/instructors/taihua-li/20185" target="_blank"> General Assembly</a>, Chicago, IL
+						&raquo; <a href="https://medicine.yale.edu/ycmi/" target="_blank">School of Medicine, Yale University</a>, New Haven, CT
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Informatics Researcher (Pro Bono)
 					</div>
 					<div class="col-md-3 text-right">
-						Apr'19 - Jun'19
+						Jun'17 - Sep'18
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Research Assistant
+					</div>
+					<div class="col-md-3 text-right">
+						Mar'17 - Jun'17
 					</div>
 				</div>
 				<!-- work exp 3 end -->
@@ -359,24 +403,35 @@
 				<!-- work exp 4 -->
 				<div class="row">
 					<div class="col-md-9 text-left">
-						&raquo; Informatics Researcher, <a href="https://medicine.yale.edu/ycmi/" target="_blank"> Yale University</a>, New Haven, CT
-					</div>
-					<div class="col-md-3 text-right">
-						Mar'17 - Sep'18
+						&raquo; <a href="http://digitalyouthnetwork.org/" target="_blank"> Digital Youth Network</a>, Chicago, IL
 					</div>
 				</div>
-				<!-- work exp 4 end -->
-
-				<!-- work exp 5 -->
 				<div class="row">
 					<div class="col-md-9 text-left">
-						&raquo; Data Scientist, <a href="http://digitalyouthnetwork.org/" target="_blank"> Digital Youth Network</a>, Chicago, IL
+						&nbsp;&nbsp;&raquo; Volunteer Data Scientist
 					</div>
 					<div class="col-md-3 text-right">
-						Dec'15 - Jun'17
+						Jun'16 - Jun'17
 					</div>
 				</div>
-				<!-- work exp 5 end -->
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Data Scientist
+					</div>
+					<div class="col-md-3 text-right">
+						Jun'16 - Sep'16
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-9 text-left">
+						&nbsp;&nbsp;&raquo; Research Assistant
+					</div>
+					<div class="col-md-3 text-right">
+						Dec'15 - Jun'16
+					</div>
+				</div>
+
+				<!-- work exp 4 end -->
 			</div>
 			<!-- content end -->
 		</div>
