update about me content

--- a/pages/about.html
+++ b/pages/about.html
@@ -80,8 +80,8 @@
 							&nbsp;&nbsp;&nbsp;In college, I was intrigued by how much economics theories can explain real-world phenomenon with equations.
 							However, I was puzzled by one question, <i>"how did economists come up with equations"</i>, which led me to study econometrics, and that was
 							when I determined to purse data science as career. I chose data science not only because of its mathematical charm but also due to its ability to help solve problems in
-							an autonomous way. Data science also helps to discover and validate findings that might not have been previously discovered. Last but not least,
-							I love building awesome AI-infested tools! 😄
+							an autonomous way. Data science also helps me to discover and validate findings that might not have been previously discovered, which further helps
+							me to acquire new industry knowledge. Last but not least, I love building awesome AI-infested tools and this is what data science is about! 😄
 						</p>
 					</div>
 				</div>
