--- a/pages/about.html
+++ b/pages/about.html
@@ -97,7 +97,7 @@
 
 					<div class="row">
 						<p class="sub-content">
-							&nbsp;&nbsp;&nbsp; In the past 5 years, I have overcomed obstacles that dragged my feet in this data science journey,
+							&nbsp;&nbsp;&nbsp; In the past 5 years, I have overcome obstacles that dragged my feet in this data science journey,
 							such as figuring out math, learning to code and to build softwares. In the next couple years,
 							I wish to let the business side of me meet the technical side of me to become a client-facing data scientist. I believe a good data scientist
 							cannot disconnect from business, and I aim to become a more business-oriented data scientist than I am right now.
