update about me

--- a/pages/about.html
+++ b/pages/about.html
@@ -63,7 +63,7 @@
 					<ul>
 						<li>user-centered application (data-driven UX)</li>
 						<li>recommender systems</li>
-						<li>mixed-media data modeling, such as combining natural language with images</li>
+						<li>mixed-media data modeling</li>
 					</ul>
 				</div>
 			</div>
