--- a/pages/template.html
+++ b/pages/template.html
@@ -9,51 +9,55 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<!-- additional stylesheets -->
-		<link rel="stylesheet" href="../styles/project.css" type="text/css">
-		<link rel="icon" href="../img/logo.png" type="image/icon type">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-		<title>Taihua's Projects</title>
+		<link href="https://fonts.googleapis.com/css?family=Amiri|Hepta+Slab|Staatliches&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="../css/shared.css" type="text/css">
+		<link rel="stylesheet" href="../css/.css" type="text/css">
+		<link rel="icon" href="../img/seal.jpg" type="image/icon type">
+		<title>About Taihua Li</title>
 	</head>
 
-	<body style="font-family: 'Roboto Mono', monospace; background-color: rgba(240, 242, 231, 0.6)">
+	<body>
+
 		<!-- navigation bar -->
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-light">
-			  <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="logo" style="width:35px; height:35px;"/></a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <a class="navbar-brand" href="../index.html">
+					<img src="../img/seal.jpg" alt="logo" style="width:35px; height:35px;"/>
+				</a>
+
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 
-			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <div class="collapse navbar-collapse" id="navbarContent">
 			    <ul class="navbar-nav mr-auto">
 			      <li class="nav-item">
 			        <a class="nav-link" href="../index.html">Home</a>
 			      </li>
 						<li class="nav-item">
-							<a class="nav-link" href="./about.html">About Me</a>
+							<a class="nav-link" href="./about.html">About</a>
 						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="">Projects<span class="sr-only">(current)</span></a>
+						<li class="nav-item">
+							<a class="nav-link" href="./articles.html">Articles</a>
+						</li>
+            <li class="nav-item">
+							<a class="nav-link" href="./talks.html">Talks</a>
 						</li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="./resume.html">Resume</a>
+			        <a class="nav-link" href="./cv.html">Curriculum Vitae</a>
 			      </li>
 						<li class="nav-item">
-							<a class="nav-link" href="./contact.html">Contact Me</a>
+							<a class="nav-link" href="./contact.html">Contact</a>
 						</li>
 			  </div>
 			</nav>
-			<hr>
 		</div>
 		<!-- navigation bar end -->
 
-		<p class="text-center"> Coming soon...</p>
-
-
 		<!-- copyright -->
 		<footer class="page-footer">
-			<div class="text-left fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
-				&copy;2019 Taihua Li All Rights Reserved
+			<div class="text-center font-weight-lighter text-muted copyright-text">
+				&copy; 2019 Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
