--- a/pages/about.html
+++ b/pages/about.html
@@ -9,183 +9,137 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<!-- additional stylesheets -->
-		<link rel="stylesheet" href="../styles/about.css" type="text/css">
-		<link rel="icon" href="../img/logo.png" type="image/icon type">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Special+Elite&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Amiri|Hepta+Slab|Staatliches&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="../css/shared.css" type="text/css">
+		<link rel="stylesheet" href="../css/about-page.css" type="text/css">
+		<link rel="icon" href="../img/seal.jpg" type="image/icon type">
 		<title>About Taihua Li</title>
 	</head>
 
-	<body style="font-family: 'Roboto Mono', monospace; background-color: rgba(240, 242, 231, 0.6)">
+	<body>
+
 		<!-- navigation bar -->
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-light">
-			  <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="logo" style="width:35px; height:35px;"/></a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <a class="navbar-brand" href="../index.html">
+					<img src="../img/seal.jpg" alt="logo" style="width:35px; height:35px;"/>
+				</a>
+
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 
-			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <div class="collapse navbar-collapse" id="navbarContent">
 			    <ul class="navbar-nav mr-auto">
 			      <li class="nav-item">
 			        <a class="nav-link" href="../index.html">Home</a>
 			      </li>
 						<li class="nav-item active">
-							<a class="nav-link" href="">About Me<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="./about.html">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="./project.html">Projects</a>
+							<a class="nav-link" href="./articles.html">Articles</a>
+						</li>
+            <li class="nav-item">
+							<a class="nav-link" href="./talks.html">Talks</a>
 						</li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="./resume.html">Resume</a>
+			        <a class="nav-link" href="./cv.html">Curriculum Vitae</a>
 			      </li>
 						<li class="nav-item">
-							<a class="nav-link" href="./contact.html">Contact Me</a>
+							<a class="nav-link" href="./contact.html">Contact</a>
 						</li>
 			  </div>
 			</nav>
-			<hr>
 		</div>
 		<!-- navigation bar end -->
 
-		<!-- about me -->
-		<div class="container-fluid" style="width: 64%;">
+		<div class="container my-1">
 
-			<div class="row mt-4">
-				<div class="col-md-5">
-					<img class="img-fluid mx-auto" src="../img/headshot-1.jpeg" style="width: auto; height: auto;" alt="Photo of Taihua Li"/>
-				</div>
-
-				<div class="col-md-7 my-5">
-					<p>
-						&nbsp&nbsp My name is <span style="font-family: STKaiti; font-size: 1.2em;">李泰华</span> (Taihua Li), and I go by Ray.
-						I am a data scientist in Chicago, IL working on AI research and data lake architecting at CCC Information Services.
-						My passion in AI includes but not limited to,</p>
-					<ul>
-						<li>user-centered application (data-driven UX)</li>
-						<li>recommender systems</li>
-						<li>mixed-media data modeling</li>
-					</ul>
+			<!-- About Me -->
+			<div class="row fadein-order-1">
+				<div class="col-sm-12 text-left">
+					<p class="subtitle font-weight-bold">About Me</p>
 				</div>
 			</div>
 
-			<!-- why data science -->
-			<div class="row justify-content-left my-3">
-				<div class="col">
-					<div class="row">
-						<p class="sub-title mb-0">Why data science?</p>
-					</div>
+			<div class="row fadein-order-1">
+				<div class="col-sm-4 text-center">
+					<img class="img-fluid profile-picture content-picture" src="../img/me.jpg" alt="picture of me">
+				</div>
 
-					<div class="row">
-						<p class="sub-content">
-							&nbsp;&nbsp;&nbsp;In college, I was intrigued by how much economics theories can explain real-world phenomenon with equations.
-							However, I was puzzled by one question, <i>"how did economists come up with equations"</i>, which led me to study econometrics, and that was
-							when I determined to pursue data science as career. I chose data science not only because of its mathematical charm but also due to its ability to help solve problems in
-							an autonomous way. Data science also helps me to discover and validate findings that might not have been previously discovered, which further helps
-							me to acquire new industry knowledge. Last but not least, I love building awesome AI-infested tools and this is what data science is about! 😄
-						</p>
-					</div>
+				<div class="col-sm-8 text-left text-content my-auto">
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a data scientist
+						working on AI technologies for auto insurance and automotive industries at CCC Information Services.
+						My passion in AI research mainly focuses on,
+					<ul>
+						<li>user-centered AI design (data-driven UX design)</li>
+						<li>recommender system</li>
+						<li>mixed-media data modeling</li>
+					</ul>
+					</p>
+				</div>
+			</div>
+			<!-- About Me End -->
+
+			<!-- why data science -->
+			<div class="row fadein-order-2">
+				<div class="col-sm-12 text-left">
+					<p class="subtitle font-weight-bold">Why Data Science</p>
+				</div>
+			</div>
+
+			<div class="row fadein-order-2">
+				<div class="col-sm-8 text-left text-content my-auto">
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;When I was in college, I was excited by how economic theories and models
+						can explain real-world phenomena. However, I was puzzled how economists come up with specific mathematical
+						models, which led me to study econometrics and eventually to study machine learning. What machine learning
+						attracts me the most is its ability to discover patterns in historical data using intuitively simple
+						algorithms, such as gradient descent. Furthermore, I am fascinated by how data science as a whole can help
+						organizations transform and better processes, services and products, which directly or indirectly benefit
+						how we live our everyday lives.
+					</p>
+				</div>
+
+				<div class="col-sm-4 text-center">
+					<img class="img-fluid content-picture" src="../img/data-science.gif" alt="gradient-descent-gif">
 				</div>
 			</div>
 			<!-- why data science end -->
 
-			<!-- before data science -->
-			<div class="row justify-content-left my-3">
-				<div class="col">
-					<div class="row">
-						<p class="sub-title mb-0">Who I want to become</p>
-					</div>
-
-					<div class="row">
-						<p class="sub-content">
-							&nbsp;&nbsp;&nbsp; In the past 5 years, I have overcome obstacles that dragged my feet in this data science journey,
-							such as figuring out math, learning to code and to build softwares. In the next couple years,
-							I wish to let the business side of me meet the technical side of me to become a client-facing data scientist. I believe a good data scientist
-							cannot disconnect from business, and I aim to become a more business-oriented data scientist than I am right now.
-						</p>
-					</div>
+			<!-- what does logo mean -->
+			<div class="row fadein-order-3">
+				<div class="col-sm-12 text-left">
+					<p class="subtitle font-weight-bold">A Bit About My Logo</p>
 				</div>
 			</div>
-			<!-- before data science end -->
 
-			<!-- fun story -->
-			<div class="row justify-content-left my-3">
-				<div class="col">
-					<div class="row">
-						<p class="sub-title mb-0">Something interesting about me</p>
-					</div>
+			<div class="row fadein-order-3">
+				<div class="col-sm-4 text-center">
+					<img class="img-fluid seal-picture" src="../img/seal.jpg" alt="my-seal">
+				</div>
 
-					<div class="row">
-						<p class="sub-content">
-							&nbsp;&nbsp;&nbsp;I dreamed about becoming an artist and here are some of my work back in the day.
-						</p>
-					</div>
-
-					<div id="artExamples" class="carousel slide" data-ride="carousel">
-					  <ol class="carousel-indicators">
-					    <li data-target="#artExamples" data-slide-to="0" class="active"></li>
-					    <li data-target="#artExamples" data-slide-to="1"></li>
-					    <li data-target="#artExamples" data-slide-to="2"></li>
-							<li data-target="#artExamples" data-slide-to="3"></li>
-					    <li data-target="#artExamples" data-slide-to="4"></li>
-					    <li data-target="#artExamples" data-slide-to="5"></li>
-							<li data-target="#artExamples" data-slide-to="6"></li>
-					    <li data-target="#artExamples" data-slide-to="7"></li>
-					  </ol>
-					  <div class="carousel-inner">
-					    <div class="carousel-item active">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-0.jpg" alt="First Art">
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-1.jpg" alt="Second Art">
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-2.jpg" alt="Third Art">
-					    </div>
-							<div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-3.jpg" alt="Fourth Art">
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-4.jpg" alt="Fifth Art">
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-5.jpg" alt="Sixth Art">
-					    </div>
-							<div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-6.jpg" alt="Seventh Art">
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block w-100 artwork" src="../img/artwork/art-7.jpg" alt="Eight Art">
-							</div>
-					  </div>
-					  <a class="carousel-control-prev" href="#artExamples" role="button" data-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Previous</span>
-					  </a>
-					  <a class="carousel-control-next" href="#artExamples" role="button" data-slide="next">
-					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Next</span>
-					  </a>
-					</div>
-
-					<div class="row mt-3">
-						<p class="sub-content">
-							Although it did not work out as expected, I am doodling from time to time which helps me to relax my brain from
-							all day of coding and math.
-						</p>
-					</div>
-
+				<div class="col-sm-8 text-left text-content my-auto">
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;I am from Quanzhou, Fujian Province, China, and my Chinese name is 李泰华.
+						In Chinese culture, signatures can be represented in several ways, one of which is called a
+						<a href="https://en.wikipedia.org/wiki/Seal_(East_Asia)" target="_blank">seal</a>.
+						The seal shown on the left is one way to represent my full name, where the character on the right
+						is my last name, 李 (Li), the top-left character is 泰 (Tai), and the bottom-left character is 华 (Hua).
+					</p>
 				</div>
 			</div>
-			<!--fun story end -->
 
+			<!-- what does logo mean end -->
 
 		</div>
-		<!-- about me end -->
 
 		<!-- copyright -->
 		<footer class="page-footer">
-			<div class="text-left fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
-				&copy;2019 Taihua Li All Rights Reserved
+			<div class="text-center font-weight-lighter text-muted copyright-text">
+				&copy; 2019 Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
