--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
 	<body>
 
+		<div class="vertical-center">
 		<div class="container px-2">
 
 			<!-- intro -->
-			<div class="row my-5 fadein-order-1">
+			<div class="row mb-5 fadein-order-1">
 				<div class="col-sm-12">
 					<div class="text-center">
 						<img src="img/seal.jpg" class="rounded" alt="logo">
@@ -63,6 +64,7 @@
 			</div>
 
 			<!-- intro end -->
+		</div>
 		</div>
 
 		<!-- copyright -->
