--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,77 +54,78 @@
 		</div>
 		<!-- navigation bar end -->
 
-		<div class="container fadein-order-1 my-5">
-			<div class="row">
-				<div class="col-sm-12">
-					<p class="text-center text-content">
-						Please message me directly on <a href="https://www.linkedin.com/in/taihuali/" target="_blank">LinkedIn</a>
-						or email me using the form below.
-					</p>
+		<div class="vertical-center">
+			<div class="container fadein-order-1">
+				<div class="row">
+					<div class="col-sm-12">
+						<p class="text-center text-content">
+							Please message me directly on <a href="https://www.linkedin.com/in/taihuali/" target="_blank">LinkedIn</a>
+							or email me using the form below.
+						</p>
+					</div>
+				</div>
+
+				<div class="row justify-content-center mx-2">
+					<form id="email-form" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
+						<div class="form-row">
+							<label for="name">Name</label>
+							<input type="text" class="form-control" id="name" name="name" required>
+						</div>
+
+						<div class="form-row my-3">
+							<label for="email">E-mail</label>
+							<input type="email" class="form-control" id="email" name="email" required>
+							<small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+						</div>
+
+						<div class="form-row my-3">
+							<label for="itype">Message Type</label>
+							<select class="form-control" id="itype" name="itype" required>
+								<option value="" selected disabled hidden>----</option>
+								<option>Networking</option>
+								<option>Volunteer opportunity</option>
+								<option>Speaker opportunity</option>
+								<option>Let's grab a coffee!</option>
+								<option>Other</option>
+							</select>
+						</div>
+
+						<div class="form-row my-3">
+							<label for="msg">Message</label>
+							<textarea class="form-control" id="msg" rows="8" name="message" required></textarea>
+						</div>
+
+						<div class="form-check my-3">
+					    <input type="checkbox" class="form-check-input" id="consentCheck" required>
+					    <label class="form-check-label" for="consentCheck">
+								<div>
+									<span style="color:#ff0000;">I</span>
+									<span style="color:#ff2a00;">'</span>
+									<span style="color:#ff5500;">m</span>
+									<span style="color:#ff7f00;"> </span>
+									<span style="color:#ffbf00;">n</span>
+									<span style="color:#ffff00;">o</span>
+									<span style="color:#aaff00;">t</span>
+									<span style="color:#55ff00;"> </span>
+									<span style="color:#00ff00;">a</span>
+									<span style="color:#00ff80;"> </span>
+									<span style="color:#00ffff;">r</span>
+									<span style="color:#00aaff;">o</span>
+									<span style="color:#0055ff;">b</span>
+									<span style="color:#0000ff;">o</span>
+									<span style="color:#4600ff;">t</span>
+									<span style="color:#8b00ff;">🤖</span>
+								</div>
+							</label>
+					  </div>
+
+						<button type="submit" class="btn btn-dark mt-3" value="Send">Send</button>
+						<button type="reset" class="btn btn-dark mt-3" value="Reset">Reset</button><br>
+						<small id="credit" class="text-muted">Credit: <a href="http://formspree.io" target="_blank">Formspree</a> (free E-mail contact form service)</small>
+					</form>
 				</div>
 			</div>
-
-			<div class="row justify-content-center">
-				<form id="email-form" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
-					<div class="form-row">
-						<label for="name">Name</label>
-						<input type="text" class="form-control" id="name" name="name" required>
-					</div>
-
-					<div class="form-row my-3">
-						<label for="email">E-mail</label>
-						<input type="email" class="form-control" id="email" name="email" required>
-						<small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
-					</div>
-
-					<div class="form-row my-3">
-						<label for="itype">Message Type</label>
-						<select class="form-control" id="itype" name="itype" required>
-							<option value="" selected disabled hidden>----</option>
-							<option>Networking</option>
-							<option>Volunteer opportunity</option>
-							<option>Speaker opportunity</option>
-							<option>Let's grab a coffee!</option>
-							<option>Other</option>
-						</select>
-					</div>
-
-					<div class="form-row my-3">
-						<label for="msg">Message</label>
-						<textarea class="form-control" id="msg" rows="8" name="message" required></textarea>
-					</div>
-
-					<div class="form-check my-3">
-				    <input type="checkbox" class="form-check-input" id="consentCheck" required>
-				    <label class="form-check-label" for="consentCheck">
-							<div>
-								<span style="color:#ff0000;">I</span>
-								<span style="color:#ff2a00;">'</span>
-								<span style="color:#ff5500;">m</span>
-								<span style="color:#ff7f00;"> </span>
-								<span style="color:#ffbf00;">n</span>
-								<span style="color:#ffff00;">o</span>
-								<span style="color:#aaff00;">t</span>
-								<span style="color:#55ff00;"> </span>
-								<span style="color:#00ff00;">a</span>
-								<span style="color:#00ff80;"> </span>
-								<span style="color:#00ffff;">r</span>
-								<span style="color:#00aaff;">o</span>
-								<span style="color:#0055ff;">b</span>
-								<span style="color:#0000ff;">o</span>
-								<span style="color:#4600ff;">t</span>
-								<span style="color:#8b00ff;">🤖</span>
-							</div>
-						</label>
-				  </div>
-
-					<button type="submit" class="btn btn-dark my-3" value="Send">Send</button>
-					<button type="reset" class="btn btn-dark my-3" value="Reset">Reset</button><br>
-					<small id="credit" class="text-muted">Credit: <a href="http://formspree.io" target="_blank">Formspree</a> (free E-mail contact form service)</small>
-				</form>
-			</div>
 		</div>
-
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center fixed-bottom font-weight-lighter text-muted copyright-text">
