--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 
-				<div class="row justify-content-center mx-2">
+				<div class="row justify-content-center mx-2 my-3">
 					<form id="email-form" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
 						<div class="form-row">
 							<label for="name">Name</label>
