--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 
 		<div class="vertical-center">
-			<div class="container px-2">
+			<div class="container">
 
 				<!-- intro -->
 				<div class="row mb-5 fadein-order-1">
