add new position

--- a/pages/about.html
+++ b/pages/about.html
@@ -70,8 +70,7 @@
 
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a data scientist
-						working on AI technologies for auto insurance and automotive industries at CCC Information Services.
+						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a data scientist at Amazon Web Services (AWS).
 						My passion in AI research mainly focuses on,
 					<ul>
 						<li>user-centered AI design (data-driven UX design)</li>
