--- a/pages/cv.html
+++ b/pages/cv.html
@@ -68,6 +68,23 @@
 			<div class="row">
 				<div class="col-sm-8 text-left">
 					<p class="text-content">
+						<span class="font-weight-bold">Data Scientist II</span>, Amazon Web Services (AWS), Chicago, IL
+						<ul class="text-subcontent">
+							<li>"Alexa, what does a data scientist do?"</li>
+							<li>Check out <a href="https://aws.amazon.com/machine-learning/" target="_blank">Machine Learning on AWS</a></li>
+						</ul>
+					</p>
+				</div>
+				<div class="col-sm-4 text-right">
+					<p class="text-content">
+						October 2019 - Present
+					</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-8 text-left">
+					<p class="text-content">
 						<span class="font-weight-bold">Data Scientist II</span>, CCC Information Services, Chicago, IL
 						<ul class="text-subcontent">
 							<li>Predictive and prescriptive modeling with model deployment (Python, Java)</li>
@@ -81,7 +98,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						January 2019 - Current
+						January 2019 - October 2019
 					</p>
 				</div>
 			</div>
