add suicide detection paper

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -289,6 +289,10 @@
 
 			<ul class="text-content">
 				<li>
+					Samah Fodeh, <span style="color: red;">Taihua Li</span>, Kevin Menczynski, Tedd Burgette, Andrew Harris, Georgeta Ilita, Satyan Rao, Jonathan Gemmell, Daniela Raicu. "Using Machine Learning Algorithms to Detect Suicide Risk Factors on Twitter." In 2019 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 941-948. IEEE, 2019.
+					<a href="https://ieeexplore.ieee.org/abstract/document/8955490" target="_blank">pdf</a>
+				</li>
+				<li>
 					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics (2019).
 					<a href="https://ieeexplore.ieee.org/document/8704869" target="_blank">pdf</a>
 				</li>
