--- a/pages/about.html
+++ b/pages/about.html
@@ -39,10 +39,6 @@
 						</li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="./cv.html">Curriculum Vitae</a>
-			      </li>
-						<li class="nav-item">
-							<a class="nav-link" href="./contact.html">Contact</a>
-						</li>
 			  </div>
 			</nav>
 		</div>
@@ -65,11 +61,11 @@
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
 						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a data scientist at Amazon Web Services (AWS).
-						My passion in AI research mainly focuses on,
+						My passion in AI/ML research mainly focuses on,
 					<ul>
-						<li>user-centered AI design (data-driven UX design)</li>
-						<li>recommender system</li>
-						<li>mixed-media data modeling</li>
+						<li>User-centered AI</li>
+						<li>Recommender system</li>
+						<li>Multi-modal data modeling</li>
 					</ul>
 					</p>
 				</div>
@@ -86,13 +82,12 @@
 			<div class="row fadein-order-2">
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;When I was in college, I was excited by how economic theories and models
-						can explain real-world phenomena. However, I was puzzled how economists come up with specific mathematical
-						models, which led me to study econometrics and eventually to study machine learning. What machine learning
-						attracts me the most is its ability to discover patterns in historical data using intuitively simple
-						algorithms, such as gradient descent. Furthermore, I am fascinated by how data science as a whole can help
-						organizations transform and better processes, services and products, which directly or indirectly benefit
-						how we live our everyday lives.
+						&nbsp;&nbsp;&nbsp;&nbsp;When I was in college, I LOVED how economic theories and models explain real-world phenomena.
+						However, I was puzzled by how economists came up with the mathematical models, which led me to study
+						econometrics and eventually to study machine learning. What machine learning attracts me the most is
+						its ability to discover patterns in data using intuitively simple methodologies. Furthermore, I am fascinated
+						by how data science as a whole can help organizations transform and better processes, services and products,
+						which directly or indirectly benefit how we live our lives.
 					</p>
 				</div>
 
@@ -119,7 +114,7 @@
 						&nbsp;&nbsp;&nbsp;&nbsp;I am from Quanzhou, Fujian Province, China, and my Chinese name is 李泰华.
 						In Chinese culture, signatures can be represented in several ways, one of which is called a
 						<a href="https://en.wikipedia.org/wiki/Seal_(East_Asia)" target="_blank">seal</a>.
-						The seal shown on the left is one way to represent my full name, where the character on the right
+						The seal on the left is one way to represent my name, where the character on the right
 						is my last name, 李 (Li), the top-left character is 泰 (Tai), and the bottom-left character is 华 (Hua).
 					</p>
 				</div>
@@ -132,7 +127,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center font-weight-lighter text-muted copyright-text">
-				&copy; 2020 Taihua Li
+				&copy; 2022 Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
