--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="col-sm-12">
 						<p class="text-center h1">
 						  Welcome! My name is <span class="font-weight-bold">Taihua Li</span>.<br>
-							<span class="h4 text-muted font-weight-light">Data Scientist | Techie | Innovator</span>
+							<span class="h4 text-muted font-weight-light">Full-Stack Data Scientist</span>
 						</p>
 					</div>
 				</div>
